// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section Component renders collapsible closed by default without separator 1`] = `
<div>
  <div
    class="header collapsible"
    data-testid="DATA-TEST-ID"
  >
    <h2
      class="typography h2"
    >
      TITLE
    </h2>
    <i
      class="icon icon"
      icon="fal,chevron-left"
    />
  </div>
  <div
    aria-hidden="true"
    class="body"
    id="react-collapsed-panel-5"
    style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
  >
    <div
      id="CHILD1"
    />
    <div
      id="CHILD2"
    />
  </div>
  <hr
    class="footer"
  />
</div>
`;

exports[`Section Component renders not collapsible 1`] = `
<div>
  <div
    class="header"
    data-testid="DATA-TEST-ID"
  >
    <h2
      class="typography h2"
    >
      TITLE
    </h2>
  </div>
  <div
    aria-hidden="false"
    class="body"
    id="react-collapsed-panel-6"
    style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
  >
    <div
      id="CHILD1"
    />
    <div
      id="CHILD2"
    />
  </div>
  <hr
    class="footer"
  />
</div>
`;

exports[`Section Component renders not collapsible 2`] = `
<div>
  <div
    class="header"
    data-testid="DATA-TEST-ID"
  >
    <h2
      class="typography h2"
    >
      TITLE
    </h2>
  </div>
  <div
    aria-hidden="false"
    class="body"
    id="react-collapsed-panel-6"
    style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
  >
    <div
      id="CHILD1"
    />
    <div
      id="CHILD2"
    />
  </div>
  <hr
    class="footer"
  />
</div>
`;

exports[`Section Component renders not collapsible with open initially ignored 1`] = `
<div>
  <div
    class="header"
    data-testid="DATA-TEST-ID"
  >
    <h2
      class="typography h2"
    >
      TITLE
    </h2>
  </div>
  <div
    aria-hidden="false"
    class="body"
    id="react-collapsed-panel-8"
    style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
  >
    <div
      id="CHILD1"
    />
    <div
      id="CHILD2"
    />
  </div>
  <hr
    class="footer"
  />
</div>
`;

exports[`Section Component renders with separator 1`] = `
<div>
  <div
    class="header collapsible"
    data-testid="DATA-TEST-ID"
  >
    <h2
      class="typography h2"
    >
      TITLE
    </h2>
    <i
      class="icon icon open"
      icon="fal,chevron-left"
    />
  </div>
  <div
    aria-hidden="false"
    class="body"
    id="react-collapsed-panel-1"
    style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
  >
    <div
      id="CHILD1"
    />
    <div
      id="CHILD2"
    />
  </div>
  <hr
    class="footer"
  />
</div>
`;

exports[`Section Component renders with separator 2`] = `
<div>
  <div
    class="header collapsible"
    data-testid="DATA-TEST-ID"
  >
    <h2
      class="typography h2"
    >
      TITLE
    </h2>
    <i
      class="icon icon"
      icon="fal,chevron-left"
    />
  </div>
  <div
    aria-hidden="true"
    class="body"
    id="react-collapsed-panel-1"
    style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
  >
    <div
      id="CHILD1"
    />
    <div
      id="CHILD2"
    />
  </div>
  <hr
    class="footer"
  />
</div>
`;

exports[`Section Component renders with separator 3`] = `
<div>
  <div
    class="header collapsible"
    data-testid="DATA-TEST-ID"
  >
    <h2
      class="typography h2"
    >
      TITLE
    </h2>
    <i
      class="icon icon open"
      icon="fal,chevron-left"
    />
  </div>
  <div
    aria-hidden="false"
    class="body"
    id="react-collapsed-panel-1"
    style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
  >
    <div
      id="CHILD1"
    />
    <div
      id="CHILD2"
    />
  </div>
  <hr
    class="footer"
  />
</div>
`;
